<resources
    xmlns:xliff="http://schemas.android.com/apk/res-auto">\

    <string name="app_name">Udacians</string>
    <string name="app_sub_title">Networking Community By and For Udacity Students</string>

    <!-- Note that this app is student-run, not by Udacity -->
    <string name="app_disclaimer">This is a student-run community and is not a part of Udacity Inc.</string>

    <!-- Displayed on the login screen -->
    <string name="login_title">Udacians!</string>
    <string name="login_prompt">Login with Udacity</string>
    <string name="login_action">Login</string>
    <string name="login_placeholder_email">Email Address</string>
    <string name="login_placeholder_password">Password</string>

    <!-- errors related to logging in -->
    <string name="incorrect_credentials">Username or password is incorrect.</string>
    <string name="connection_failed">Failed to connect to service. Please try again.</string>

    <!-- Displayed on user profile -->
    <string name="about">About</string>
    <string name="post">Post</string>
    <string name="post_placeholder">Write post here</string>
    <string name="title_default">Udacian</string>
    <string name="about_default">I\'m a Udacian!</string>

    <!-- Displayed on the chat screen -->
    <string name="enter_message">Enter message</string>
    <string name="send">Send</string>

    <!-- Displayed in drawer layout -->
    <string name="edit_profile">Edit profile</string>

    <!-- Navigation drawer list items -->
    <string name="nav_map">Map</string>
    <string name="nav_feed">Feed</string>
    <string name="nav_connections">Connections</string>
    <string name="nav_discussions">Discussions</string>
    <string name="nav_events">Events</string>
    <string name="nav_jobs">Jobs</string>
    <string name="nav_articles">Articles</string>
    <string name="nav_help">Help</string>
    <string name="nav_logout">Logout</string>

    <!-- navigation drawer toggle -->
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>

    <!-- edit profile screen -->
    <string name="profile_picture">Profile Picture</string>
    <string name="job_title">Title</string>
    <!-- uses same "about" string as on user profile -->
    <string name="personal_website">Personal Website</string>
    <string name="personal_blog">Blog</string>
    <string name="linkedin" translatable="false">LinkedIn</string>
    <string name="twitter" translatable="false">Twitter</string>
    <!-- Reset save changes made on edit profile screen -->
    <string name="save_changes">Save Changes</string>
    <!-- text of the save changes button when uploading new profile picture -->
    <string name="uploading_photo">Uploading photo&#8230;</string>

    <!-- Event screen -->
    <!-- Used to show event details in blue header areas -->
    <string name="evemt_location">Place: <xliff:g id="location">%1$s</xliff:g></string>
    <string name="event_organizer">Organizer: <xliff:g id="organizer">%1$s</xliff:g></string>
    <!-- Prompt to send email about this event -->
    <string name="event_send_email">Send email to attendees</string>

    <!-- Connections list screen -->
    <!-- Default text for when user's location (string form) is not specified -->
    <string name="unknown_location">Unknown location</string>

    <!-- Discussions list screen -->
    <!-- descriptor for Nanodegree's general chat -->
    <string name="nd_chat_default">General discussion for students in the <xliff:g id="name">%1$s</xliff:g></string>
    <!-- Appended to Nanodegree names where student is in beta program -->
    <string name="nd_beta_suffix">Beta</string>
    <!-- Designates user who posted a discussion topic -->
    <string name="discussion_posted_by">Posted by <xliff:g id="name">%1$s</xliff:g></string>
    
    <!-- Adding new data to the map -->
    <!-- When asking users what type of data they would like to add -->
    <string name="add_new_prompt">Add new&#8230;</string>
    <!-- Choices of different types of data to add -->
    <string name="type_topic">Topic</string>
    <string name="type_article">Article</string>
    <string name="type_event">Event</string>

    <!-- Button text for input text -->
    <string name="input_cancel">Cancel</string>
    <string name="input_back">Back</string>
    <string name="input_next">Next</string>
    <string name="input_submit">Submit</string>

    <!-- Discussion prompt for new topic -->
    <string name="input_topic_title">New Discussion Topic</string>
    <string name="input_topic_p1_subtitle">What would you like to discuss with other students?</string>
    <string name="input_topic_p1_hint">Discussion prompt</string>

    <!-- prompt for title and URL of article -->
    <string name="input_article_title">New Article/Blog Post</string>
    <string name="input_article_p1_subtitle">What is the title of the article?</string>
    <string name="input_article_p1_hint">E.g. How to Code Like Jon Skeet</string>

    <string name="input_article_p2_subtitle">What is the URL of the article?</string>
    <string name="input_article_p2_hint">http://google.com</string>

    <!-- Event name, location, and about -->
    <string name="input_event_title">New Event</string>
    <string name="input_event_p1_subtitle">What is the name of the event?</string>
    <string name="input_event_p1_hint">iOS Developers Meetup</string>

    <string name="input_event_p2_subtitle">Where is this event?</string>
    <string name="input_event_p2_hint">E.g. Microsoft NERD Center. Cambridge, MA</string>

    <string name="input_event_p3_subtitle">Event Details (can be edited later)</string>
    <string name="input_event_p3_hint">Competitive Hackathon, Saturday at 1:00 PM</string>

    <string name="last_direct_message_time">Last message: <xliff:g id="time">%1$s</xliff:g></string>

    <!-- used on jobs widget -->
    <string name="jobs_widget_title">Jobs</string>
    <string name="jobs_widget_no_data">No relevant jobs found.</string>

    <!-- content descriptions -->
    <string name="a11y_udacians_logo">Udacians</string>
    <string name="a11y_add_image">Add Image</string>
    <string name="a11y_add_connection">Add connection</string>
    <string name="a11y_attend_event">Attend event</string>
    <string name="a11y_message">Open messages</string>
    <string name="a11y_leave_chat">Leave chat</string>
    <string name="a11y_choose_profile_picture">Choose profile picture</string>
    <string name="a11y_delete_post">Delete post</string>
    <string name="a11y_profile_picture">Profile picture</string>
    <!-- placeholder for user generated photo content -->
    <string name="a11y_photo">Photo</string>
    <!-- placeholder for images in discussions list screen -->
    <!-- This content description is replaced by a more specific one at runtime -->
    <string name="a11y_chat_photo">Chat photo</string>
    <!-- for nav drawer icons, each also has a label which can be used to distinguish them -->
    <string name="a11y_drawer_item">Drawer item</string>

    <!-- strings used by shared preferences -->
    <string name="pref_auth_token">token</string>
    <!-- used to store cookies from Udacity API -->
    <string name="pref_cookies">cookies</string>
    <!-- used as location when performing job search -->
    <string name="pref_city">city</string>
    <!-- Keywords to be used for job search widget, comma separated strings should be converted to array -->
    <string name="pref_job_keywords">keywords</string>

    <string name="sync_account_type" translatable="false">com.owenlarosa.udacians</string>
    <string name="content_authority" translatable="false">com.owenlarosa.udaciansapp</string>

    <!-- menu item titles -->

    <!-- On connections screen, users can sort between connections (following) and followers -->
    <string name="menu_item_connections">Connections</string>
    <string name="menu_item_followers">Followers</string>
    <!-- On discussions screen, users can sort between group discussions and direct messages -->
    <string name="menu_item_group">Group</string>
    <string name="menu_item_direct">Direct</string>

    <string name="menu_edit_about">Edit about</string>

    <string name="edit_event">Edit Event</string>
    <string name="edit_event_about_prompt">Tell us about this event</string>
    <string name="edit_event_about_hint">Some details about this event</string>

    <string name="dialog_positive_action">OK</string>
    <string name="dialog_negative_action">Cancel</string>

</resources>
