<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:paddingBottom="@dimen/vertical_edge_margin"
        android:paddingLeft="@dimen/edge_margin"
        android:paddingRight="@dimen/edge_margin"
        android:paddingTop="@dimen/vertical_edge_margin"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <Button
            android:id="@+id/edit_save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_changes"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:padding="@dimen/vertical_edge_margin"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_marginTop="@dimen/vertical_edge_margin"
            android:layout_marginBottom="@dimen/vertical_edge_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_picture"
            android:layout_columnSpan="2"
            android:layout_marginTop="@dimen/vertical_edge_margin"
            android:layout_marginBottom="@dimen/vertical_edge_margin"/>

        <ImageButton
            android:id="@+id/edit_profile_image_button"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:scaleType="fitCenter"
            android:background="@color/white"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_marginBottom="@dimen/vertical_edge_margin"
            android:paddingTop="@dimen/vertical_edge_margin"
            android:paddingBottom="@dimen/vertical_edge_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/job_title"
            android:layout_columnSpan="2"
            android:layout_marginBottom="@dimen/vertical_edge_margin"/>

        <EditText
            android:id="@+id/edit_title_text_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:background="@color/white"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_marginBottom="@dimen/vertical_edge_margin"
            android:enabled="false"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:layout_columnSpan="2"
            android:layout_marginBottom="@dimen/vertical_edge_margin"/>

        <EditText
            android:id="@+id/edit_about_text_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:maxLines="5"
            android:background="@color/white"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_marginBottom="@dimen/vertical_edge_margin"
            android:enabled="false"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal_website"
            android:layout_columnSpan="2"
            android:layout_marginTop="@dimen/vertical_edge_margin"
            android:layout_marginBottom="@dimen/vertical_edge_margin"/>

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/personal_site"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_marginBottom="@dimen/vertical_edge_margin"
            android:layout_marginRight="@dimen/horizontal_inter_item_space"
            android:layout_marginEnd="@dimen/horizontal_inter_item_space"/>

        <EditText
            android:id="@+id/edit_site_text_field"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:background="@color/white"
            android:layout_column="1"
            android:layout_columnSpan="1"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/vertical_edge_margin"
            android:enabled="false"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal_blog"
            android:layout_columnSpan="2"
            android:layout_marginTop="@dimen/vertical_edge_margin"
            android:layout_marginBottom="@dimen/vertical_edge_margin"/>

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:src="@drawable/blog"
            android:layout_marginBottom="@dimen/vertical_edge_margin"
            android:layout_marginRight="@dimen/horizontal_inter_item_space"
            android:layout_marginEnd="@dimen/horizontal_inter_item_space"/>

        <EditText
            android:id="@+id/edit_blog_text_field"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:background="@color/white"
            android:layout_column="1"
            android:layout_columnSpan="1"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/vertical_edge_margin"
            android:enabled="false"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/linkedin"
            android:layout_columnSpan="2"
            android:layout_marginTop="@dimen/vertical_edge_margin"
            android:layout_marginBottom="@dimen/vertical_edge_margin"/>

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/linkedin"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_marginBottom="@dimen/vertical_edge_margin"
            android:layout_marginRight="@dimen/horizontal_inter_item_space"
            android:layout_marginEnd="@dimen/horizontal_inter_item_space"/>

        <EditText
            android:id="@+id/edit_linkedin_text_field"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:background="@color/white"
            android:layout_column="1"
            android:layout_columnSpan="1"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/vertical_edge_margin"
            android:enabled="false"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twitter"
            android:layout_columnSpan="2"
            android:layout_marginTop="@dimen/vertical_edge_margin"
            android:layout_marginBottom="@dimen/vertical_edge_margin"/>

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/twitter"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_marginBottom="@dimen/vertical_edge_margin"
            android:layout_marginRight="@dimen/horizontal_inter_item_space"
            android:layout_marginEnd="@dimen/horizontal_inter_item_space"/>

        <EditText
            android:id="@+id/edit_twitter_text_field"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:background="@color/white"
            android:layout_column="1"
            android:layout_columnSpan="1"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/vertical_edge_margin"
            android:enabled="false"/>

    </GridLayout>

</ScrollView>